# soldo

./: .gitignore  docker.nix  release.nix  shell.nix  soldo.opam
.github/workflows/: compile.yaml  deploy.yaml
deployment/: Kubernetes.dhall  manifests.dhall
lib/: .merlin  client.ml  dune  parser.ml  server.ml
nix/: sources.json
